# geticon

./: .clinerules  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docker-build.yml
src/: cache.rs  favicon.rs  handlers.rs  lib.rs  main.rs  models.rs  tests.rs  url_utils.rs  validation.rs
