[package]
name = "geticon"
version = "0.3.1"
edition = "2021"

[dependencies]
actix-web = "4.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
md5 = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.18"
image = "0.24"
url = "2.5"
sentry = "0.36"
sentry-actix = "0.36"

[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
mockito = "1.2"
actix-rt = "2.9"
